# ChangeLog for dev-libs/intel-common
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/intel-common/ChangeLog,v 1.18 2014/11/30 17:42:34 jlec Exp $

*intel-common-15.0.1.133 (30 Nov 2014)

  30 Nov 2014; Justin Lecher <jlec@gentoo.org> +intel-common-15.0.1.133.ebuild:
  Version Bump

*intel-common-15.0.0.090-r1 (15 Sep 2014)

  15 Sep 2014; Justin Lecher <jlec@gentoo.org> -intel-common-15.0.0.090.ebuild,
  +intel-common-15.0.0.090-r1.ebuild:
  Add missing rpms in installation

*intel-common-15.0.0.090 (15 Sep 2014)

  15 Sep 2014; Justin Lecher <jlec@gentoo.org> +intel-common-15.0.0.090.ebuild:
  Version Bump

*intel-common-14.0.3.174 (02 Jun 2014)

  02 Jun 2014; Justin Lecher <jlec@gentoo.org> +intel-common-14.0.3.174.ebuild:
  Version Bump

*intel-common-14.0.2.144 (24 Mar 2014)

  24 Mar 2014; Justin Lecher <jlec@gentoo.org> +intel-common-14.0.2.144.ebuild:
  Version Bump

*intel-common-14.0.1.106 (21 Feb 2014)

  21 Feb 2014; Justin Lecher <jlec@gentoo.org> +intel-common-14.0.1.106.ebuild:
  Version Bump, #500386

*intel-common-14.0.0.080 (02 Oct 2013)

  02 Oct 2013; Justin Lecher <jlec@gentoo.org> +intel-common-14.0.0.080.ebuild:
  Version Bump

*intel-common-13.1.5.192 (10 Jul 2013)

  10 Jul 2013; Justin Lecher <jlec@gentoo.org> +intel-common-13.1.5.192.ebuild:
  Version Bump

*intel-common-13.1.3.163 (02 May 2013)

  02 May 2013; Justin Lecher <jlec@gentoo.org> +intel-common-13.1.3.163.ebuild:
  Version Bump

  14 Feb 2013; Justin Lecher <jlec@gentoo.org> intel-common-13.1.2.146.ebuild:
  Correct min freespace value

*intel-common-13.1.2.146 (14 Feb 2013)

  14 Feb 2013; Justin Lecher <jlec@gentoo.org> +intel-common-13.1.2.146.ebuild:
  Version Bump

  14 Feb 2013; Justin Lecher <jlec@gentoo.org> intel-common-13.0.0.079.ebuild,
  intel-common-13.0.0.079-r1.ebuild, intel-common-13.0.1.117.ebuild:
  Add KEYWORDS, #342185
