@@ -1,6 +1,8 @@
 DIST peewee-2.4.5.tar.gz 363910 SHA256 460693ed37a3945b02ebdfe7249d1270d629fe29b8803b97972302a43577385e SHA512 bc7b6c05f45fcc13bc5f65db50e8201b7cbd0151d1af861218ff4c75da37d6a8b964d8364f8d4222ce32390ade922fd69d40b7edc1025eed4b906991023f3e6c WHIRLPOOL e7ff4bed144a801d634fe2276948b28b8791921bbeb3175792933c644509ec20ce75c06947a7d5588cb4506897694e0712ada7eb1ed98a8c5d65c8922df682b1
 DIST peewee-2.4.6.tar.gz 374550 SHA256 a891154959c3c1cc3b68942c5b5a70b674598e4916ae6b73f4672f85da5b0404 SHA512 72b1e3f99b787be5cdd6d996669ad6ee0a8e47151e6ad08ebde171e48559e5a77218147dff62bba1d5e324c6cfa6014fced2c585ef0bba867bff1d4815673992 WHIRLPOOL 9792b9e76c096aa78ec75aa3f75a126791f18812a3fe80de2c212640ddf7fc1ce3fd1a53397527d67120ddb573f036cc94b7f7d6e46f21044f8ab4a710a1fd7c
+DIST peewee-2.4.7.tar.gz 384928 SHA256 ab89cee2ea8a205761aa4e360dbbeb8cf0b755485c2515ef7ef2331c3f33cd68 SHA512 8c1d7e8ed727afade4de08e0d8d9417a99508c7498dd9064cc225083b7694faf4bf838e896819681a6994d7f0dad484068715e89e45cd690a43ad0f0cebf3550 WHIRLPOOL dbb89f7c64fa06a6af5e07b8f881cdd806695e5459839c3897ef6e203fa3a3112acdb57c369b31999eb2caee74b6db26843c6067e41adc6cab24277e46207e4a
 EBUILD peewee-2.4.5.ebuild 1135 SHA256 522d2e13be14b975747ab3eded4da294d7bce31c0d75340398be26f779ee7a63 SHA512 d003f974f540ec88c2a1d9d067c30903c7b12a264aea0491476a121426ebc6045f7262ce499b3c0ed2564b07ee3e45ea23fd9b4516ce591e286bb12cb2699045 WHIRLPOOL c16077dbb47b041ddf258026dce80cac2b4ceedc9bf9421dfd7e5605d8eb17592b7d229389cb7857a1357557ead62b28642707225ce31fc6905a979a6bbf4c4a
 EBUILD peewee-2.4.6.ebuild 1137 SHA256 13d5288cc92b953102719a03eefad64b697008625b1d7fbc03b790e2a5f4058b SHA512 a61131ddc0600785717adb4757abcac4b76b0a0a79902663edd28954eae65dbb122da1e3ed36d4046e714a58f82463bee99792ef290806ed810b9ee3c61ac246 WHIRLPOOL 16d9f648fb78d4ae5c915b3b6cf9ba565ebe2e670ce86385f5823f0a03d59646ffc8abf065e02f153bffb093f7b60a0c3dd567a8f7a585740725af603bd757c0
-MISC ChangeLog 3308 SHA256 0c8c7df9a0b4b556b0eb088f7f333653413d8cdb2435325fb2fcf43cd971935b SHA512 2180ad205280633dea40b940629914b308b93903c676c6c5218c0296fa62cf22cb4e9ac7acf603d07a3869d6c33a26528451a47796543f0da124254e5ef1b428 WHIRLPOOL 29bd4f87dd8873f0706263423a6b8864b6e1545aeea4cc36a0f159b34c3bd80fccf28b36667c79835c2a404c80d0c361e8bd5a0027f1ca9a3f5f6143159a9451
+EBUILD peewee-2.4.7.ebuild 1137 SHA256 7f4d1e6f0adeb4e3901a07e9163fd8324b12e5966af11924ae36ff909a7c9f81 SHA512 30ef520ec2edd1c2dd07489117d0a18efcc55782c4ad5819233ad4ad87f8b5b67ae3df970e8ddf9af6ca13e11d838ee64c653bec25f19b8d8b11cc5c9ec80446 WHIRLPOOL 2e4317af4c4d9c1e1e5de184a1bf120ba62fff7d748a14409bf4e91aac732b6cc065a67c4ba67d2ee7ea778e02bc741ad1d0163747801d93121d17934ed65e2c
+MISC ChangeLog 3417 SHA256 a0b7a69964a430bb8f4eac570d384cf405641706c5afa94ed7e5d3db5f2e9736 SHA512 49be73f2914c04458a0f9cccb8b87d0b82d055a3ae5c4207185c8287a23a4c301aa5a1f314be07f54186c3ad6d06510ef2485f1fcc65d4624254234e184799dc WHIRLPOOL 13ce8b8ae61873e12f7f41be18cde8218bdcefa40d6ea1d867af6b7d0c16d50b7166cf3d7dd82d023434cef53263c27fe2813e5ed034b98164bb433e498b55d1
 MISC metadata.xml 160 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a SHA512 7c02a1de1ddcb6b7c6378cceff0458da3a15d5381417f7cdf01874e7c372664b8899863f41b3a2fd8d6ad67ceb732dac6da0cc17575bf8e3e6d89480417c6628 WHIRLPOOL ed2795e4466eda8c804d5067c87386e269a59fe959393057ca5ddc36851e00f5210c4da1adf4bbdfdbb7d1d3d5c60aced25727ca12fdc8305d9e263a3aca9b13
