@@ -1,0 +1,13 @@
+DEFINED_PHASES=install postinst postrm pretend setup unpack
+DEPEND=app-arch/rpm2targz
+DESCRIPTION=Common libraries and utilities needed for Intel compilers and libraries
+EAPI=5
+HOMEPAGE=http://software.intel.com/en-us/articles/intel-compilers/
+IUSE=+compiler examples multilib
+KEYWORDS=-* ~amd64 ~x86 ~amd64-linux ~x86-linux
+LICENSE=Intel-SDP
+RESTRICT=mirror
+SLOT=0
+SRC_URI=http://registrationcenter-download.intel.com/irc_nas/5207/parallel_studio_xe_2015_update2.tgz
+_eclasses_=check-reqs	a7f404bfb16e0a996700c5d3ac4edad3	eutils	998e5931fb95b10a6a11ec796ada2759	intel-sdp	0bea3d47a4bdd4f4b80cd111958a2e31	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=0aba2b64ebb51ba734d8fa006babcc9f
