@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/peewee
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/peewee/ChangeLog,v 1.25 2015/01/26 06:38:27 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/peewee/ChangeLog,v 1.26 2015/02/12 07:56:59 patrick Exp $
+
+*peewee-2.4.7 (12 Feb 2015)
+
+  12 Feb 2015; Patrick Lauer <patrick@gentoo.org> +peewee-2.4.7.ebuild:
+  Bump
 
 *peewee-2.4.6 (26 Jan 2015)
 
